<resources>
    <string name="app_name">Catetin</string>

    <string name="home">Home</string>
    <string name="financial">Financial</string>
    <string name="todo">To Do</string>
    <string name="profile">Profile</string>

    <!--  sub section  -->
    <string name="deadline">Deadline</string>
    <string name="quick_notes">Quick Notes</string>
    <!--  empty value  -->
    <string name="empty_deadline">Hooray! you have no deadline</string>
    <string name="empty_quicknotes">There is no Quick Notes</string>
    <string name="empty_financial">No Financial Model</string>
    <!--  content description  -->
    <string name="insert_deadline">Insert Deadline</string>
    <string name="insert_quicknotes">Insert Quicknotes</string>
    <string name="insert_financial">Insert Financial</string>

    <string name="close_deadline_dialog">Back to Home Page</string>

    <string name="set_date">Set Date</string>
    <string name="date_example">Jumat, 16 April 2022</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_confirmation">Are you sure want to delete this item?</string>
    <string name="fund_allocation">Fund Allocation</string>
    <string name="type">Type</string>
    <string name="title_finance">finance</string>
    <string name="title_todo">todo</string>
    <string name="title_profile">profile</string>
</resources>