<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.deadline.DeadlineDialogFragment">

    <TextView
        android:id="@+id/dialog_tv_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_vertical"
        android:text="@string/deadline"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_ib_close_deadline" />


    <ImageButton
        android:id="@+id/dialog_ib_close_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_deadline_dialog"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/dialog_tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:lines="1"
        android:text="@string/date_example"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_btn_date"
        app:layout_constraintEnd_toStartOf="@id/dialog_btn_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_btn_date" />

    <Button
        android:id="@+id/dialog_btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/set_date"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_ib_close_deadline" />

    <TextView
        android:id="@+id/dialog_tv_keterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/dialog_tv_date"
        app:layout_constraintTop_toBottomOf="@id/dialog_tv_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_ti_keterangan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@id/dialog_btn_date"
        app:layout_constraintStart_toStartOf="@id/dialog_tv_date"
        app:layout_constraintTop_toBottomOf="@id/dialog_tv_keterangan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_et_keterangan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/dialog_btn_date"
        app:layout_constraintTop_toBottomOf="@id/dialog_ti_keterangan" />

</androidx.constraintlayout.widget.ConstraintLayout>