<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.DeleteDialogFragment">

    <TextView
        android:id="@+id/dialog_tv_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/delete_confirmation"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/dialog_btn_no"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/no"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintEnd_toEndOf="@id/dialog_tv_choose"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/dialog_tv_choose"
        app:layout_constraintTop_toBottomOf="@id/dialog_tv_choose" />

    <Button
        android:id="@+id/dialog_btn_yes"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/yes"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintBottom_toBottomOf="@id/dialog_btn_no"
        app:layout_constraintEnd_toEndOf="@id/dialog_tv_choose"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/dialog_tv_choose"
        app:layout_constraintTop_toTopOf="@id/dialog_btn_no" />


</androidx.constraintlayout.widget.ConstraintLayout>