<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/insert_finance_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Insert Your Finance Model"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/type"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/insert_finance_title"
            app:layout_constraintTop_toBottomOf="@id/insert_finance_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_ti_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@id/insert_finance_title"
            app:layout_constraintStart_toStartOf="@id/insert_finance_title"
            app:layout_constraintTop_toBottomOf="@id/tv_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_et_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_fund_allocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/fund_allocation"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/insert_finance_title"
            app:layout_constraintTop_toBottomOf="@id/dialog_ti_type" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_ti_fund_allocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/fund_allocation"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintEnd_toEndOf="@id/insert_finance_title"
            app:layout_constraintStart_toStartOf="@id/insert_finance_title"
            app:layout_constraintTop_toBottomOf="@id/tv_fund_allocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_et_notes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/save"
            android:textSize="18sp"
            style="@style/Widget.Material3.Button"
            app:layout_constraintEnd_toEndOf="@id/insert_finance_title"
            app:layout_constraintStart_toStartOf="@id/insert_finance_title"
            app:layout_constraintTop_toBottomOf="@id/dialog_ti_fund_allocation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
